[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-universal"
version = "1.0.0"
description = "Universal Python SDK compatible with 'import anthropic' - supports 15+ AI providers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "rudushi4"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "anthropic", "claude", "openai", "gemini", "deepseek", 
    "codestral", "mistral", "groq", "xai", "grok",
    "huggingface", "together", "ai", "sdk", "llm"
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/rudushi4/anthropic-universal-python"
Repository = "https://github.com/rudushi4/anthropic-universal-python"

[tool.setuptools.packages.find]
where = ["src"]
